[fix] round borders on mobile view

--- a/3-column-preview-card-component/style.css
+++ b/3-column-preview-card-component/style.css
@@ -21,12 +21,10 @@ html, body {
     flex-direction: column;
 }
 .car_card:first-child {
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-top-left-radius: 15px;
 }
 .car_card:last-of-type {
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 15px;
 }
 h2 {
     font-family: Big Shoulders Display;
@@ -108,5 +106,19 @@ button:hover {
     }
     button {
         padding: 18px 60px 18px 60px;
+    }
+    .car_card:first-child {
+        border-top-right-radius: 15px;
+    }
+    .car_card:last-child {
+        border-bottom-left-radius: 15px;
+    }
+}
+@media (min-width: 601px) {
+    .car_card:first-child {
+        border-bottom-left-radius: 15px;
+    }
+    .car_card:last-child {
+        border-top-right-radius: 15px;
     }
 }
